--- a/lp.html
+++ b/lp.html
@@ -29,15 +29,13 @@
 </head>
 <body>
     <h1>Um pouco mais sobre nosso trabalho</h1>
-    <div class="carrossel">
-        <div id="img">
-            <ul type="none">
-                <li class="img1"><img src="img/Cake.jpg" alt="Cake"></li>
-                <li class="img2"><img src="img/mochi.jpg" alt="Mochi"></li>
-                <li class="img3"><img src="img/Dango.jpg" alt="dango"></li>
-                <li class="img4"><img src="img/namagashi.jpg" alt="Namagashi"></li>
-            </ul>
-        </div>
+    <div  id="Carrossel">
+        <ul type="none" class="img">
+            <li><img src="img/Cake.jpg" alt="Cake" class="Cake"></li>
+            <li><img src="img/Dango.jpg" alt="Dango" class="Dango"></li>
+            <li><img src="img/namagashi.jpg" alt="Namagashi" class="Namagashi"></li>
+            <li><img src="img/mochi.jpg" alt="Mochi"  class="Mochi"></li>
+        </ul>
     </div>
 </body>
 </html>
