--- a/lp.html
+++ b/lp.html
@@ -31,7 +31,7 @@
     <h1>Um pouco mais sobre nosso trabalho</h1>
     <div  id="Carrossel">
         <ul type="none" class="img" >
-            <li><img src="img/Cake.jpg" alt="Cake" class="Cake"></li>
+            <li id="jpg"><img src="img/Cake.jpg" alt="Cake" class="Cake"></li>
             <li><img src="img/Dango.jpg" alt="Dango" class="Dango"></li>
             <li><img src="img/namagashi.jpg" alt="Namagashi" class="Namagashi"></li>
             <li><img src="img/mochi.jpg" alt="Mochi"  class="Mochi"></li>
