p aparece quando mouse passa sobre as imgs

--- a/lp.html
+++ b/lp.html
@@ -28,10 +28,10 @@
     <h1>Um pouco mais sobre nosso trabalho</h1>
     <div  id="Carrossel">
         <ul type="none" class="img" >
-            <li><img src="img/Cake.jpg" alt="Cake" class="Cake"></li>
-            <li><img src="img/Dango.jpg" alt="Dango" class="Dango"></li>
-            <li><img src="img/namagashi.jpg" alt="Namagashi" class="Namagashi"></li>
-            <li><img src="img/mochi.jpg" alt="Mochi"  class="Mochi"></li>
+            <li><img src="img/Cake.jpg" alt="Cake" class="Cake"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p></li>
+            <li><img src="img/Dango.jpg" alt="Dango" class="Dango"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p></li>
+            <li><img src="img/namagashi.jpg" alt="Namagashi" class="Namagashi"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p></li>
+            <li><img src="img/mochi.jpg" alt="Mochi"  class="Mochi"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p></li>
         </ul>
     </div>
 </body>
