--- a/lp.html
+++ b/lp.html
@@ -29,6 +29,7 @@
    <section  id="history">
      <h2>Sobre nosso amor</h2>
      <p class="texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste earum rem error praesentium adipisci. Autem quibusdam vero temporibus expedita voluptate quisquam inventore, ipsa beatae, quo dolorum sunt iste facere in?</p>
+     <img src="" alt="Chef">
    </section>
     <div  id="Carrossel">
         <ul type="none" class="img" >
