--- a/lp.html
+++ b/lp.html
@@ -28,8 +28,11 @@
     <h1>DocesMara</h1>
    <section  id="history">
      <h2>Sobre nosso amor</h2>
-     <p class="texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste earum rem error praesentium adipisci. Autem quibusdam vero temporibus expedita voluptate quisquam inventore, ipsa beatae, quo dolorum sunt iste facere in?</p>
-     <img src="" alt="Chef">
+     <p class="texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste earum rem error praesentium adipisci. Autem quibusdam vero temporibus expedita voluptate quisquam inventore, ipsa beatae, quo dolorum sunt iste facere in?
+     </p>
+     <img src="img/chef.png" alt="Chef" id="Chef">
+     <div class="bolha">1</div>
+     <div class="bolha2">2</div>
    </section>
     <div  id="Carrossel">
         <ul type="none" class="img" >
