--- a/lp.html
+++ b/lp.html
@@ -13,7 +13,7 @@
                         <li>Sobre</li>
                     </a>
                     
-                    <a href="Evaluations" target="_self">
+                    <a href="#Evaluations" target="_self">
                         <li >Avaliações</li>
                     </a>
                     <a href="#Carrossel" target="_self">
@@ -30,7 +30,7 @@
      <h2>Sobre nosso amor</h2>
      <p class="texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste earum rem error praesentium adipisci. Autem quibusdam vero temporibus expedita voluptate quisquam inventore, ipsa beatae, quo dolorum sunt iste facere in?
      </p>
-     <img src="img/chef.png" alt="Chef" id="Chef">
+     <img src="img/Chef (3).png" alt="Chef" id="Chef">
      <div class="bolha">1</div>
      <div class="bolha2">2</div>
    </section>
@@ -43,5 +43,8 @@
                 <li><img src="img/mochi.jpg" alt="Mochi"  class="Mochi"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p></li>
         </ul>
     </div>
+  <footer id="Evaluations">
+      
+  </footer>
 </body>
 </html>
