--- a/lp.html
+++ b/lp.html
@@ -38,10 +38,10 @@
         <h3 id="amor">Mostrando nosso amor
         </h3>
         <ul type="none" class="img" >
-                <li><img src="img/Cake.jpg" alt="Cake" class="Cake"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p></li>
-                <li><img src="img/Dango.jpg" alt="Dango" class="Dango"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p></li>
-                <li><img src="img/namagashi.jpg" alt="Namagashi" class="Namagashi"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p></li>
-                <li><img src="img/mochi.jpg" alt="Mochi"  class="Mochi"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p></li>
+                <li><img src="img/Cake.jpg" alt="Cake" class="Cake"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit.<button class="btn">Compre</button></p></li>
+                <li><img src="img/Dango.jpg" alt="Dango" class="Dango"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit.<button class="btn1">Compre</button></p></li>
+                <li><img src="img/namagashi.jpg" alt="Namagashi" class="Namagashi"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit.<button class="btn2">Compre</button></p></li>
+                <li><img src="img/mochi.jpg" alt="Mochi"  class="Mochi"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit.<button class="btn3">Compre</button></p></li>
         </ul>
     </div>
   <footer id="Evaluations">
