--- a/lp.html
+++ b/lp.html
@@ -9,7 +9,7 @@
         <main>
             <div id="menu">
                 <ul>
-                    <a href="#history" target="_self">
+                    <a href="#sobre" target="_self">
                         <li>Sobre</li>
                     </a>
                     
@@ -26,7 +26,7 @@
 </head>
 <body>
     <h1>DocesMara</h1>
-   <section  id="history">
+   <section  id="sobre">
      <h2>Sobre nosso amor</h2>
      <p class="texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste earum rem error praesentium adipisci. Autem quibusdam vero temporibus expedita voluptate quisquam inventore, ipsa beatae, quo dolorum sunt iste facere in?
      </p>
