--- a/lp.html
+++ b/lp.html
@@ -9,6 +9,7 @@
         <main>
             <div id="menu">
                 <ul>
+                    <img src="" alt="">
                     <a href="#sobre" target="_self">
                         <li>Sobre</li>
                     </a>
