--- a/lp.html
+++ b/lp.html
@@ -9,7 +9,7 @@
         <main>
             <div id="menu">
                 <ul>
-                    <img src="" alt="">
+                    <img src="img/cakeicon.png" alt="icon" id="icon">
                     <a href="#sobre" target="_self">
                         <li>Sobre</li>
                     </a>
