--- a/lp.html
+++ b/lp.html
@@ -8,8 +8,8 @@
     <header>
         <main>
             <div id="menu">
+                <i><img src="img/cakeicon.png" alt="icon" id="icon"></i>
                 <ul>
-                    <img src="img/cakeicon.png" alt="icon" id="icon">
                     <a href="#sobre" target="_self">
                         <li>Sobre</li>
                     </a>
@@ -39,10 +39,36 @@
         <h3 id="amor">Mostrando nosso amor
         </h3>
         <ul type="none" class="img" >
-                <li><img src="img/Cake.jpg" alt="Cake" class="Cake"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit.<button class="btn">Compre</button></p></li>
-                <li><img src="img/Dango.jpg" alt="Dango" class="Dango"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit.<button class="btn1">Compre</button></p></li>
-                <li><img src="img/namagashi.jpg" alt="Namagashi" class="Namagashi"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit.<button class="btn2">Compre</button></p></li>
-                <li><img src="img/mochi.jpg" alt="Mochi"  class="Mochi"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit.<button class="btn3">Compre</button></p></li>
+               <li>
+                <img src="img/Cake.jpg" alt="cake" class="cake">
+                <div class="card">
+                    <h1>Cake</h1>
+                    <h2>Bolo de Capuchinno com recheio de chocolate</h2>
+                    <span>R$250</span>
+                    <button>Compre</button>
+                </div>
+                <img src="img/namagashi.jpg" alt="namagashi" class="namagashi">
+                <div class="card">
+                    <h1>Namagashi</h1>
+                    <h2>Bolo de Capuchinno com recheio de chocolate</h2>
+                    <span>R$250</span>
+                    <button>Compre</button>
+                </div>
+                <img src="img/mochi.jpg" alt="Mochi" class="mochi">
+                <div class="card">
+                    <h1>Mochi</h1>
+                    <h2>Bolo de Capuchinno com recheio de chocolate</h2>
+                    <span>R$250</span>
+                    <button>Compre</button>
+                </div>
+                <img src="img/Dango.jpg" alt="Dango" class="dango">
+                <div class="card">
+                    <h1>Dango</h1>
+                    <h2>Bolo de Capuchinno com recheio de chocolate</h2>
+                    <span>R$250</span>
+                    <button>Compre</button>
+                </div>
+               </li>
         </ul>
     </div>
   <footer id="Evaluations">
