--- a/lp.html
+++ b/lp.html
@@ -17,7 +17,7 @@
                     <a href="#Evaluations" target="_self">
                         <li >Avaliações</li>
                     </a>
-                    <a href="#Carrossel" target="_self">
+                    <a href="#Demonstrações" target="_self">
                         <li>Demonstrações</li>
                     </a>
                 </ul>
@@ -32,11 +32,11 @@
      <p class="texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste earum rem error praesentium adipisci. Autem quibusdam vero temporibus expedita voluptate quisquam inventore, ipsa beatae, quo dolorum sunt iste facere in?
      </p>
      <img src="img/Chef (3).png" alt="Chef" id="Chef">
-     <div class="bolha">1</div>
-     <div class="bolha2">2</div>
+     <div class="bolha"></div>
+     <div class="bolha2"></div>
    </section>
-    <div  id="Carrossel">
-        <h3 id="amor">Mostrando nosso amor
+    <div  id="Demonstrações">
+        <h3 id="demonstration">Mostrando nosso trabalho
         </h3>
         <ul type="none" class="img" >
                <li>
