Avaliações dos clientes

--- a/lp.html
+++ b/lp.html
@@ -28,7 +28,7 @@
 <body>
     <h1>DocesMara</h1>
    <section  id="sobre">
-     <h2>Sobre nosso amor</h2>
+     <h2>Sobre nossa história</h2>
      <p class="texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste earum rem error praesentium adipisci. Autem quibusdam vero temporibus expedita voluptate quisquam inventore, ipsa beatae, quo dolorum sunt iste facere in?
      </p>
      <img src="img/Chef (3).png" alt="Chef" id="Chef">
@@ -74,7 +74,13 @@
   <footer id="Evaluations">
       <h4>Nossas Avaliações </h4>
       <div id="clientes">
-        
+        <ul>
+            <li class="clientes">
+                <div class="coments"><p class="comentarios">Doces maravilhosos, perfeitos para festas.</p></div>
+                <div class="coments"><p class="comentarios">O bolo de chocolate com menta é o meu sabor favorito e sempre peço daqui.</p></div>
+                <div class="coments"><p class="comentarios">Sabor de infância, pura nostalgia</p></div>
+            </li>
+        </ul>
       </div>
   </footer>
 </body>
