--- a/lp.html
+++ b/lp.html
@@ -76,9 +76,11 @@
       <div id="clientes">
         <ul>
             <li class="clientes">
-                <div class="coments"><p class="comentarios">Doces maravilhosos, perfeitos para festas.</p></div>
-                <div class="coments"><p class="comentarios">O bolo de chocolate com menta é o meu sabor favorito e sempre peço daqui.</p></div>
-                <div class="coments"><p class="comentarios">Sabor de infância, pura nostalgia</p></div>
+                <div class="coments"><img src="img/Maki.jpg" alt="Maki" class="Maki"><p class="comentarios">Doces maravilhosos, perfeitos para festas.</p></div>
+            
+                <div class="coments"> <img src="img/Nobara.jpg" alt="Nobara" class="Nobara"><p class="comentarios">O bolo de chocolate com menta é o meu sabor favorito e sempre peço daqui.</p></div>
+        
+                <div class="coments"> <img src="img/Mikasa.jpg" alt="Mikasa" class="Mikasa"><p class="comentarios">Sabor de infância, pura nostalgia</p></div>
             </li>
         </ul>
       </div>
