alinhammento das imagens dos clientes

--- a/lp.html
+++ b/lp.html
@@ -76,17 +76,18 @@
       <div id="clientes">
         <div class="cliente-1">
             <img src="img/Maki.jpg" alt="Maki">
-            <p>Doces maravilhosos, perfeitos para confraternizações.</p>
+            <p class="coments">Doces maravilhosos, perfeitos para confraternizações.</p>
         </div>
     
         <div class="cliente-2">
             <img src="img/Choso.jpg" alt="Choso">
+            <p class="coments">Sobremesas deliciosas,ótimas para o dia a dia</p>
             
         </div>
 
         <div class="cliente-3">
             <img src="img/Nobara.jpg" alt="Nobara">
-            <p>O bolo de red Velvet é o meu favorito, recomedo demasiadamente.</p>
+            <p class="coments">O bolo de red Velvet é o meu favorito, recomedo demasiadamente.</p>
         </div>
       </div>
   </footer>
