Cirando um hover para os clientes

--- a/lp.html
+++ b/lp.html
@@ -26,7 +26,7 @@
     </header>
 </head>
 <body>
-    <h1>DocesMara</h1>
+    <h1 class="titulo">DocesMara</h1>
    <section  id="sobre">
      <h2 class="history">Sobre nossa história</h2>
      <p class="texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste earum rem error praesentium adipisci. Autem quibusdam vero temporibus expedita voluptate quisquam inventore, ipsa beatae, quo dolorum sunt iste facere in?
