Descrições dos doces

--- a/lp.html
+++ b/lp.html
@@ -50,21 +50,22 @@
                 <img src="img/namagashi.jpg" alt="namagashi" class="namagashi">
                 <div class="card">
                     <h1>Namagashi</h1>
-                    <h2>Bolo de Capuchinno com recheio de chocolate</h2>
+                    <h2>Sabor delicado e suave de Matcha</h2>
                     <span>R$250</span>
                     <button>Compre</button>
                 </div>
                 <img src="img/mochi.jpg" alt="Mochi" class="mochi">
                 <div class="card">
                     <h1>Mochi</h1>
-                    <h2>Bolo de Capuchinno com recheio de chocolate</h2>
+                    <h2>Disparado o mais vendido da loja sabor napolitano</h2>
                     <span>R$250</span>
                     <button>Compre</button>
                 </div>
                 <img src="img/Dango.jpg" alt="Dango" class="dango">
                 <div class="card">
                     <h1>Dango</h1>
-                    <h2>Bolo de Capuchinno com recheio de chocolate</h2>
+                    <h2>Bolinho de arroz com molho
+                        de soja caramelizado.</h2>
                     <span>R$250</span>
                     <button>Compre</button>
                 </div>
